fix(ol-item): adjust font-family and box-shadow for active state; update story gap

--- a/src/ui/components/atoms/ol-item/OLItem.module.scss
+++ b/src/ui/components/atoms/ol-item/OLItem.module.scss
@@ -8,7 +8,7 @@
   background-color: $ads-fill-primary;
   color: $ads-color-main;
   display: flex;
-  font-family: Poppins, sans-serif;
+  font-family: Poppins-Regular, sans-serif;
   font-weight: 400;
   justify-content: center;
   letter-spacing: 0%;
@@ -46,6 +46,6 @@
   }
 
   &--active {
-    border: solid 0.25rem $ads-primary-soft;
+    box-shadow: 0 0 0 0.25rem $ads-primary-soft;
   }
 }
